--- a/main/platformio.ini
+++ b/main/platformio.ini
@@ -13,3 +13,6 @@ platform = atmelavr
 board = megaatmega2560
 framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
+lib_deps = 
+	arduino-libraries/Servo@^1.2.2
+	br3ttb/PID@^1.2.1
