--- a/main/platformio.ini
+++ b/main/platformio.ini
@@ -12,6 +12,7 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+monitor_speed = 115200
 lib_extra_dirs = ~/Documents/Arduino/libraries
 lib_deps = 
 	arduino-libraries/Servo@^1.2.2
